# vpn-manager

./: .gitignore  README.md  config.py  db.py  main.py  pyproject.toml  wgconf.py  wgops.py
static/: styles.css
templates/: index.html
