[project]
name = "vpnapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "qrcode>=7.4.2",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
]
